[gd_scene load_steps=7 format=3 uid="uid://ot7pjbh1rhyw"]

[ext_resource type="Script" uid="uid://dmkulon41l1ky" path="res://Passage/Scripts/passage.gd" id="1_y57or"]
[ext_resource type="VideoStream" uid="uid://o72mmjio63tn" path="res://Video/asciitest2.ogv" id="2_l4bus"]
[ext_resource type="PackedScene" uid="uid://cdc48adan4r4r" path="res://WordGrid/word_grid.tscn" id="2_w2v17"]
[ext_resource type="Script" uid="uid://b03qqm27ogvut" path="res://ManagerNodes/ReputationManager/reputation_manager.gd" id="5_vfmde"]
[ext_resource type="PackedScene" uid="uid://bor8i0t3t21x8" path="res://ManagerNodes/ProjectProgressManager/ProjectProgressManager.tscn" id="6_euac8"]
[ext_resource type="PackedScene" uid="uid://u6jgrwteg455" path="res://ManagerNodes/TimeManager/TimeManager.tscn" id="6_vfmde"]

[node name="Passage" type="CanvasLayer" groups=["Passage"]]
script = ExtResource("1_y57or")
passage_json_file_location = "res://JSON Files/d1_wake_up.txt"
passage_json_files_folder = "res://JSON Files/"

[node name="OutputBox" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 500)
offset_left = 17.0
offset_top = 57.0
offset_right = 1136.0
offset_bottom = 173.0
text = "lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum"

[node name="InputBox" type="LineEdit" parent="."]
offset_left = -1336.0
offset_top = -775.0
offset_right = -1267.44
offset_bottom = -744.0
max_length = 10

[node name="Visuals" type="VideoStreamPlayer" parent="."]
offset_left = 8.0
offset_top = 488.0
offset_right = 1288.0
offset_bottom = 1388.0
scale = Vector2(0.44886738, 0.44886738)
stream = ExtResource("2_l4bus")
autoplay = true
loop = true

[node name="ReputationManager" type="Node" parent="."]
script = ExtResource("5_vfmde")
reputation_type_dictionary = Dictionary[String, int]({
"family": 0,
"manager": 0
})
metadata/_custom_type_script = "uid://b03qqm27ogvut"

[node name="TimeManager" parent="." instance=ExtResource("6_vfmde")]

[node name="ProjectProgressManager" parent="." instance=ExtResource("6_euac8")]
offset_left = 177.0
offset_top = -45.0
offset_right = 177.0
offset_bottom = -45.0
progress = 0

[node name="ContinueButton" type="Button" parent="."]
offset_left = 556.0
offset_top = 476.0
offset_right = 564.0
offset_bottom = 484.0
text = "Continue
"

[node name="WordGrid" parent="." instance=ExtResource("2_w2v17")]
offset_left = 538.0
offset_top = 314.0
offset_right = 578.0
offset_bottom = 354.0

[connection signal="text_submitted" from="InputBox" to="." method="_on_input_box_text_submitted"]
[connection signal="pressed" from="ContinueButton" to="." method="continue_passage"]
